--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@xstate/react": "^3.0.1",
+    "antd": "^4.23.4",
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.29.3",
