--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@xstate/react": "^3.0.1",
     "antd": "^4.23.4",
     "assert": "^2.0.0",
+    "chart.js": "^3.9.1",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.29.3",
     "fs": "^0.0.1-security",
@@ -24,6 +25,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
