--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.29.3",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
+    "nedb-promises": "^6.2.1",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
