--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "typescript": "^4.8.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "xstate": "^4.33.6"
   },
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "process": "^0.11.10"
   }
 }
